fk expe+thz corr

--- a/theory.tex
+++ b/theory.tex
@@ -581,7 +581,7 @@ Further savings of space in the plot can be made using the symmetry of the forwa
 Although maybe less instructive, usually the \textit{folded} bands are plot in the literature and they are used also in Fig. \ref{fg_1dbd}, \ref{fg_rodh} and \ref{fg_erod_radius11} below. The same approach can be used for periodic structures, where the bands are separated by band gaps, cf. Fig. \ref{fg_phc}b and \ref{fg_phc}d.
 }
 %}}}
-\paragraph{Dispersion curves under virtual periodicity}%{{{
+\paragraph{Dispersion curves under virtual periodicity} \label{par_disp_curv_per}%{{{
 The vacuum properties are obviously invariant under discrete translation by an arbitrary length $a$ along the $z$-axis, which can be considered a \textit{virtual} periodicity. 
 % TODO mention the terminology "band diagram" - "dispersion curves", is there any real difference?
 
