thz sources cleanup

--- a/thztech.tex
+++ b/thztech.tex
@@ -63,32 +63,37 @@ the radiation usually being supplied by one of the solid-state sources mentioned
 }
 
 \paragraph{Nonlinear down-conversion of optical waves}
-The opposite approach generates THz radiation as the difference frequency between two detuned optical waves, known also as \textit{continuous-wave optical rectification}. The nonlinearity needed for the difference-frequency generation usually comes from intrinsic properties of a nonlinear crystal. 
+%, known also as \textit{continuous-wave optical rectification}. 
+%The nonlinearity needed for the difference-frequency generation usually comes from intrinsic properties of a nonlinear crystal. 
 %???? material, as the wavelength range of semiconductor structures operation is limited from bottom by its size.
 
-The two optical waves may come from two lasers, mutually detuned by a frequency that is to be generated. Other possibility is to use the \textit{terahertz parametric generation} where a single wave enters the nonlinear crystal as the \textit{pump} and the second wave, \textit{idler}, is generated during the nonlinear process. The \textit{idler} wave is kept in an optical resonator; the terahertz output can be tuned by changing parameters of the resonator.
+The opposite approach generates THz radiation as the difference frequency between two or more detuned optical waves.
+The radiation may come from two lasers, mutually detuned by a frequency that is to be generated. %% TODO The lasers may be classical solid state, diodes or e.g. two modes in one infrared QCL. %% TODO cite one classical, and the QCL
+Other possibility is to use the \textit{terahertz parametric generation} where a single wave enters the nonlinear crystal as the \textit{pump} and the second wave, \textit{idler}, is generated during the nonlinear process. The \textit{idler} wave is kept in an optical resonator; the terahertz output can be tuned by changing parameters of the resonator. 
+For nonlinear generation of pulses in the THz range, usually a mode-locked laser is used that emits pulses that intrinsically cover a broad spectrum of frequencies (e.g. typically over 360-390 THz for a titanium-sapphire laser). The difference-frequencies are generated from all optical frequency components simultaneously, which results in a terahertz pulse with a very broad spectrum given by the type of nonlinear medium. 
 
-The classical process of nonlinear optical conversion involves materials which are transparent for all interacting waves. For the difference-frequency generation of two slightly detuned waves, the condition of \textit{phase synchronization} is equivalent to ensure similar group velocity at the optical and terahertz frequency. Of the materials satisfying these requirements, zinc telluride (ZnTe), gallium selenide GaSe, and lithium niobate (LiNbO$_{3}$) have found widest application. 
+The classical process of nonlinear optical conversion involves transparent materials, and where some measures are taken to account for the generally different velocity of all interacting waves.
+\begin{itemize}
+\item{For the difference-frequency generation between optical waves of close frequency, the classical condition of \textit{phase synchronization} is equivalent to ensure similar \textit{group} velocity at the optical and terahertz frequency. Of the materials satisfying these requirements, zinc telluride (ZnTe), gallium selenide GaSe, and lithium niobate (LiNbO$_{3}$) have found widest application in the frequency range up to 3--5 THz. } 
+\item{The \textit{quasi-phase-matching} technique allows to compensate the difference of the group velocity of the optical wave and the terahertz wave by periodically altering the nonlinear coefficients of a crystal so that the nonlinear contribution to the resulting wave never reverses its sign. Crystals of \textit{periodically poled lithium niobate} (PPLN) are often used for this, with the possibility of shaping the poled regions as wedges (\textit{fanned-out PPLN}), which allows to change the effective poling pitch. This method is suitable for continuous-wave or narrow-band pulse terahertz generation.  }  % TODO cite 
+\item{A sufficiently strong nonlinear interaction, on a length less than the coherence length, alleviates both requirements of phase matching and low absorption of the waves. Organic crystals, e.g. made of DAST,\footnote{DAST is a shortcut for 4-dimethylamino-N-methylstilbazolium tosylate} have been reported\cite{han2000use} to have two orders of magnitude higher electrooptic coefficients than the materials usual in nonlinear optics, making them suitable for operation up to 20 THz. 
 
-If the velocities of the optical and terahertz waves are different, the difference can be compensated using the \textit{quasi-phase-matching} technique, where the nonlinear coefficients are \textit{periodically poled}, i.e. altering so that the nonlinear contribution to the resulting wave never reverses its sign. Crystals of lithium niobate (PPLN) are often used for this, with the possibility of shaping the poled regions as wedges (\textit{fanned-out PPLN}), which allows to change the effective poling pitch.
-%HN: "Čerenkov radiation - This phenomenon can be found e.g. in LiTaO3 crystals, where nTHz (f ) > N g"
+Nonlinear interaction is semiconductors is enhanced when the incident photon energy is above their band gap. Common crystals used for \textit{resonant THz emission} are GaAs or InP 
+%% + ZnTe ??  ADD ZNTE BANDGAP, 
+(with band-gaps of 1.42 and 1.34 eV, respectively), which can be illuminated by a
+ titanium-sapphire laser (with an average photon energy $hc/\lambda \approx$ 1.5 eV).
+ } 
+\item{Finally, plasma generated by high optical intensity of an optical pulse can serve as a nonlinear medium with negligible group velocity dispersion.}
+% TODO  nonlinearity/wakefield?? \cite{tong2012}     [hn15] THz generation in plasma -> 70 THz, detection in ZnTe
+ \end{itemize}
 
-Finally, the simplest solution to limit the group velocity mismatch is to use a crystal thinner than the coherence length, which, however, requires strong enough nonlinear interaction.
-Organical crystals made of DAST\footnote{DAST is a shortcut for 4-dimethylamino-N-methylstilbazolium tosylate} have been reported\cite{han2000use} to have two orders of magnitude higher electrooptic coefficients than the materials usual in nonlinear optics, making them suitable for operation up to 20 THz.
-
-\paragraph{Nonlinear conversion of optical pulses}
-The theory of nonlinear conversion can be used for short optical pulses, realizing that a short optical pulse is composed of many frequency components around its central frequency. Nonlinear difference-frequency generation between these components results in nearly single-cycle pulses, with a spectral width either similar to the optical pump, or less when limited by the nonlinear medium.
-%A nonlinear crystal can efficiently convert a short pulse to another pulse with roughly doubled frequency via sum frequency ger; its second harmonic (a pulse 
-
-The high intensity of pulsed lasers allows one to efficiently employ nonlinear phenomena that would be weak otherwise. This is especially useful for thin emitters mentioned above. 
-%TODO  upravit
-no need for phase matching if nonlinear interaction is strong enough excitation of THz wave in the front-side surface
-this occurs when inter-band transition is excited. For instance, the titanium-sapphire laser with a central wavelength of $\lambda = $810 nm corresponding to photon energy $hc/\lambda \approx$ 1.5 eV, can be used for resonant THz emission in ZnTe, GaAs or InP.%%  , with band-gaps of ADD ZNTE BANDGAP, 1.42 and 1.34 eV, respectively.
-%TODO  /upravit
-
-%Plasma generation, nonlinearity/wakefield \cite{tong2012}     [hn15] THz generation in plasma -> 70 THz, detection in ZnTe
 
 \paragraph{Acceleration of macroscopic electric current}
+Terahertz waves can be generated by \textit{photoconductivity}, i.e. by transient acceleration of charges upon optical illumination.
+In a non-saturated regime, the change of conductivity is roughly proportional to the light intensity, and thus to the square of the electric field. In this respect, the photoconductivity is similar to the aforementioned mechanism of the second-harmonic nonlinear interaction. In contrast, the major part of the energy is supplied to the photoconductive devices by external quasi-static electric field.
+
+
+
 \mdf{TODO} biased and unbiased photoconductive switches, photomixing, ...
 %%%   %% XXX
 %%%   Biased and unbiased photoconductive switches
@@ -124,6 +129,7 @@ this occurs when inter-band transition is excited. For instance, the titanium-sa
 	%% %Coherent THz Radiation from Superconductors %%%   Josephson junctions on cavities [DOE/Argonne National Laboratory. "New T-ray Source Could Improve Airport Security, Cancer Detection." ScienceDaily. ScienceDaily, 27 November 2007. <www.sciencedaily.com/releases/2007/11/071126121732.htm>.]
 
 	%% %Cerenkov-like emission of THz radiation
+	%HN: "Čerenkov radiation - This phenomenon can be found e.g. in LiTaO3 crystals, where nTHz (f ) > N g"
 	%% %
 	%% %Terahertz radiation from shocked materials
 	%% %
